--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/smirnovsky/modesto#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.0",
     "filemanager-webpack-plugin": "^8.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
